OLV-18479: fix deal-steps__wrap

--- a/src/sass/_deal-new-summary.sass
+++ b/src/sass/_deal-new-summary.sass
@@ -42,8 +42,10 @@
 	display: flex
 	flex-wrap: wrap
 	&__wrap
-		min-height: 180px
+		min-height: 175px
 		margin-bottom: 20px
+		&:last-child
+			margin-bottom: 0
 	&__step
 		// width: 20%
 		display: inline-block
